--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- Custom styles for this template -->
     <link href="cover.css" rel="stylesheet">
   </head>
-  <body class="d-flex h-100 text-center text-white bg-dark">
+  <body class="d-flex h-100 text-center text-black bg-white">
     
 <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
   <header class="mb-auto">
@@ -42,17 +42,18 @@
     </div>
   </header>
 
+
   <main class="px-3">
-    <img src="./DebitNor_logo.png" class="rounded mx-auto d-block" alt="debitnor logo">
+    <div> <img src="./DebitNor_logo.png" class="img-fluid" alt="debitnor logo"></div>
     <h1>Sliter du med gjeldsproblemer?</h1>
-    <p class="lead">Sliter du med gjeldsproblemer? Vi kan hjelpe deg. Ring Debitnor AS på 4006 1111 eller fyll ut vurderingsskjema her for gratis vurdering på telefon</p>
+    <p class="lead">Vi kan hjelpe deg. Ring Debitnor AS på 4006 1111 eller fyll ut vurderingsskjema her for gratis vurdering på telefon</p>
     <p class="lead">
-      <a href="https://debitnor.no/vurderingsskjema/" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Fyll ut vurderingssjema</a>
-    </p>
+      <a href="https://debitnor.no/vurderingsskjema/" class="btn btn-lg btn-primary fw-bold border-black bg-blue">Fyll ut vurderingssjema</a>
+
   </main>
 
-  <footer class="mt-auto text-white-50">
-    <p>Fyll ut vurderingsskjema her <a href="https://debitnor.no/vurderingsskjema/" class="text-white">her</a> <a href="https://debitnor.no" class="text-white"></a>.</p>
+  <footer class="mt-auto text-black">
+    <p>Copyright © 2022 Debitnor AS - Org nr. 992938862 MVA - All Rights Reserved</p>
   </footer>
 </div>
 
