Added link to footer

--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
     <h1>Sliter du med gjeldsproblemer?</h1>
     <p class="lead">Vi kan hjelpe deg. Ring Debitnor AS på 4006 1111 eller fyll ut vurderingsskjema her for gratis vurdering på telefon</p>
     <p class="lead">
-      <a href="https://debitnor.no/vurderingsskjema/" class="btn btn-lg btn-primary fw-bold border-black bg-blue">Fyll ut vurderingssjema</a>
+      <a href="https://debitnor.no/vurderingsskjema/" class="btn btn-lg btn-primary fw-bold border-black bg-blue">Fyll ut vurderingssjema</a></p>
 
   </main>
 
   <footer class="mt-auto text-black">
-    <p>Copyright © 2022 Debitnor AS - Org nr. 992938862 MVA - All Rights Reserved</p>
+    <p>Copyright © 2022 <a href="https://debitnor.no" class="text-decoration-none">Debitnor AS</a> - Org nr. 992938862 MVA - All Rights Reserved</p>
   </footer>
 </div>
 
