#Added link and padding on image

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 
   <main class="px-3">
-    <div> <img src="./DebitNor_logo.png" class="img-fluid" alt="debitnor logo"></div>
+    <a class="p-3" href="https://gjeldsforhandlinger.no/"> <img src="./DebitNor_logo.png" class="img-fluid" alt="debitnor logo"></a>
     <h1>Sliter du med gjeldsproblemer?</h1>
     <p class="lead">Vi kan hjelpe deg. Ring Debitnor AS på 4006 1111 eller fyll ut vurderingsskjema her for gratis vurdering på telefon</p>
     <p class="lead">
