--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 
 
   <main class="px-3">
-    <a class="p-3" href="https://gjeldsforhandlinger.no/"> <img src="./DebitNor_logo.png" class="img-fluid" alt="debitnor logo"></a>
-    <h1>Sliter du med gjeldsproblemer?</h1>
+    <a href="https://gjeldsforhandlinger.no/"> <img src="./DebitNor_logo.png" class="img-fluid" alt="debitnor logo"></a>
+    <h1 class="mt-5">Sliter du med gjeldsproblemer?</h1>
     <p class="lead">Vi kan hjelpe deg. Ring Debitnor AS på 4006 1111 eller fyll ut vurderingsskjema her for gratis vurdering på telefon</p>
     <p class="lead">
       <a href="https://debitnor.no/vurderingsskjema/" class="btn btn-lg btn-primary fw-bold border-black bg-blue">Fyll ut vurderingssjema</a></p>
